# chat-service

./: .gitignore  README.md  pyproject.toml
backend/: requirements.txt
backend/app/: database.py  main.py
backend/app/api/: routes.py
backend/app/middleware/: auth.py
backend/app/repositories/: conversation_repository.py  message_repository.py  user_repository.py
backend/app/schemas/: messages.py
backend/app/services/: message_service.py
docs/: WRITEUP.md  api-specification.md  architecture-options.md  data-model.md  non-functional-requirements.md  problem-statement.md  technology-decisions.md
docs/adr/: 001-use-sqlite-for-poc.md  002-cursor-based-pagination.md  003-repository-pattern.md  004-header-based-auth.md
frontend/: index.html
scripts/: test_api_manual.sh
tests/: conftest.py  test_authorization.py  test_conversations.py  test_pagination.py  test_send_message.py
